# pico-weather-station

./: CMakeLists.txt  README.md  weatherstation.c
UF2/: weatherstation.uf2
